--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,3 +145,36 @@ h4{
 	background:rgba(128,255,128,0.7);
 	color:#030;
 }
+
+
+/************************************************************
+                    Class styles
+************************************************************/
+
+/* target */
+nav ul{
+    display: flex;
+    flex-direction: row;
+    padding: 10px 0;
+    justify-content: space-around;
+    height: 100px;
+    align-items: center;
+}
+
+nav ul li{
+    background-color: darkorange;
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+nav ul li a{
+    display: block;
+    text-align: center;
+    height: 100px;
+
+}
+
+
+nav ul li a:hover{
+    background-color: blue;
+}
